# BoxyGo

./: .README.md.swp  .dockerignore  .env  .gitignore  Dockerfile  README.md  boxygo.repos  colcon_build.sh  commands.txt  config.rviz  configure_container.sh  configure_dev_container.sh  dev_tools.sh  frames_2025-07-16_18.37.26.gv  frames_2025-07-17_00.00.45.gv  keyboard.sh  setup_dev_environment.sh
src/: CMakeLists.txt  package.xml
src/boxygo/: CMakeLists.txt  commands.txt  package.xml  setup.py
src/boxygo/boxygo/: boxygo_moteus.py  boxygo_moteus_diagnostic.py  boxygo_stop_moteus.py  multi_wheel_from_cmdvel_out.py  multi_wheel_moteus.py  wheel_moteus.py
src/boxygo/config/: DepthCamera_Lidar.rviz  diff_drive_controller.yaml  diff_drive_controller_v1.yaml  ekf_tuning.rviz  mapper_params_online_async.yaml  mapping.rviz  nav2_params.yaml  rviz#1.rviz  slam_toolbox_params.yaml
src/boxygo/launch/: boxygo_sim_launch.py  boxygo_slam_launch.py  gazebo_launch.py  keyboard_launch.py  mapping_launch.py  moteus_launch.py  nav2_launch.py  pad_launch.py  sim_launch.py  sim_launch_v1.py  slam_launch.py  view_launch.py  wheels_stop.py
src/boxygo/maps/: my_map.pgm  my_map.yaml  playground_map.pgm  small_city_map.yaml
src/boxygo/meshes/: hov_wheel_short_colision.stl  hov_wheel_short_look.stl  hoverboard_wheel.stl  hoverboard_wheel_v2.stl  rocker_model.stl  wheel.dae
src/boxygo/models/: model.config  model.sdf
src/boxygo/urdf/: 6_wheel_robot.urdf.xacro  6_wheel_robot_v1.urdf.xacro  6_wheel_robot_v2.urdf.xacro  6_wheel_robot_v3.urdf.xacro  _d435i.urdf.xacro  boxygo.urdf.xacro  new_robot.urdf.xacro  robot_luksusowy.urdf.xacro
src/boxygo/worlds/: osiedle.world  playground.world  small_city.world  street_world.world
src/boxygo_bringup/: package.xml  setup.cfg  setup.py
src/boxygo_bringup/launch/: lidar_mapping_launch.py  mapping_general_launch.py  mapping_launch.py  nvblox_nav2_bringup_launch.py  real_robot_mapping_bringup_launch.py  real_robot_mapping_launch.py  real_robot_navigation_launch.py  realsense_camera_launch.py  realsense_launch.py  sim_robot_mapping_launch.py  sim_robot_navigation_launch.py  visualization_launch.py  vslam_bringup_launch.py  vslam_launch.py
src/boxygo_controllers/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/boxygo_controllers/config/: diff_drive_controller.yaml
src/boxygo_controllers/launch/: common_controllers_launch.py  gazebo_hw_interface_launch.py  isaac_hw_interface_launch.py  real_hw_interface_launch.py
src/boxygo_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/boxygo_description/isaac_scripts/: load_robot.py
src/boxygo_description/isaac_sim/: DifferentialDrive.usd  robot_boxygo_isaac.usd
src/boxygo_description/launch/: boxygo_state_publisher.launch.py
src/boxygo_description/meshes/: beam_full.stl  bogie_arm.stl  frame.stl  hov_wheel_colision.stl  hov_wheel_look.stl  wheel.stl  wheel_without_threads.stl
src/boxygo_description/urdf/: 6_wheel_robot.urdf.xacro  luksusowy.urdf.xacro  luksusowy_isaac.urdf  luksusowy_real.urdf  robot_luksusowy.urdf  robot_luksusowy.urdf.xacro  robot_luksusowy_isaac.urdf  robot_luksusowy_isaac.urdf.xacro  robot_luksusowy_old.urdf.xacro  sensors.urdf.xacro
src/boxygo_gazebo/: package.xml  setup.cfg  setup.py
src/boxygo_gazebo/launch/: gazebo_launch.py  isaac_launch.py
src/boxygo_gazebo/worlds/: asphalt.world  playground.world
src/boxygo_joy2twist/: package.xml  setup.cfg  setup.py
src/boxygo_joy2twist/boxygo_joy2twist/: joy2twist.py
src/boxygo_joy2twist/config/: joy2twist.yaml  teleop_twist_joy.yaml
src/boxygo_joy2twist/launch/: pad_launch.py
src/boxygo_localization/: package.xml  setup.cfg  setup.py
src/boxygo_localization/boxygo_localization/: realsense_imu_remap.py
src/boxygo_localization/config/: ekf.yaml  mapping_params.yaml  slam_toolbox_params.yaml
src/boxygo_localization/launch/: ekf_launch.py  ekf_tuning_launch.py  localization_launch.py  magwick_launch.py  mapping_launch.py  mapping_rviz_launch.py  realsense_camera_launch.py  realsense_imu_remap_launch.py  rviz_launch.py  slam_launch.py  vslam_launch.py
src/boxygo_localization/maps/: async_brzydka.pgm  async_brzydka.yaml  loop_closure.pgm  loop_closure.yaml  map.yaml  mapa.pgm  mapa.yaml  mapa123.pgm  mapa123.yaml  mapa_agh.pgm  mapa_agh.yaml  mapa_akt_1.pgm  mapa_akt_1.yaml  mapa_zla_petla.pgm  mapa_zla_petla.yaml  mieszkanie.pgm  mieszkanie.yaml  my_map.pgm  my_map.yaml  playground_map.yaml  tylmanowa.pgm  tylmanowa.yaml  tylmanowa2.pgm  tylmanowa2.yaml
src/boxygo_localization/rviz/: realsense.cfg.rviz  rviz_mapping.rviz  rviz_slam.rviz  vslam_rviz.rviz
src/boxygo_moteus/: package.xml  setup.cfg  setup.py
src/boxygo_moteus/boxygo_moteus/: boxygo_moteus.py
src/boxygo_moteus/launch/: moteus_launch.py
src/boxygo_moteus_control/: CMakeLists.txt  package.xml
src/boxygo_moteus_control/launch/: joint_controller_launch.py  moteus_controller_launch.py
src/boxygo_moteus_control/src/: moteus_hardware_interface.cpp
src/boxygo_navigation/: package.xml  setup.cfg  setup.py
src/boxygo_navigation/config/: amcl_boxygo.yaml  nav2_nvblox_params.yaml  nav2_nvblox_params_mppi.yaml  nav2_params.yaml  nav2_params_h.yaml  nav2_params_h_2.yaml  nav2_params_v2.yaml  nav2_real_param.yaml  nav2_real_param_inside.yaml  nav2_real_param_outside.yaml  nvblox_params.yaml
src/boxygo_navigation/launch/: nav2_launch.py  nav2_nvblox_launch.py  nav2_realsense_launch.py  nav2_rviz_launch.py  nav2_vslam_nvblox_launch.py  nvblox_nav2_bringup_launch.py
src/boxygo_navigation/rviz/: rviz_nav2.rviz
src/boxygo_nvblox/: package.xml  setup.cfg  setup.py
src/boxygo_nvblox/config/: nvblox_nav2_params.yaml  nvblox_params.yaml  nvblox_params_3d.yaml  realsense_params.yaml  vslam_params.yaml
src/boxygo_nvblox/launch/: nvblox_launch.py  nvblox_realsense_launch.py  nvblox_vslam_launch.py
src/boxygo_segformer/: package.xml  setup.cfg  setup.py
src/boxygo_segformer/config/: segformer_params.yaml
src/boxygo_segformer/launch/: segformer_2_launch.py  (+1 more)
src/boxygo_vslam/: package.xml  setup.cfg  setup.py
(+62 files in other folders)
