<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boxygo</name>
  <version>0.1.0</version>
  <description>
    Symulacja autonomicznego robota dostawczego “boxyGo” w ROS 2 Humble:
    Gazebo Classic + LIDAR 2D, kamera głębi, IMU + SLAM Toolbox + Nav2.
  </description>
  <maintainer email="sebastian.ligas@example.com">Sebastian Ligas</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/BoxyGo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
