<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boxygo_moteus</name>
  <version>0.0.0</version>
  <description>BoxyGo Moteus controller interface for moteus motor controllers</description>
  <maintainer email="boxygo.mail@gmail.com">BoxyGo Team</maintainer>
  <license>Apache-2.0</license>

  <depend>moteus_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


