<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boxygo_navigation</name>
  <version>0.0.0</version>
  <description>BoxyGo navigation package</description>
  <maintainer email="boxygo.mail@gmail.com">BoxyGo Team</maintainer>
  <license>Apache-2.0</license>

  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


